# odoo-project

visitor-backend/: .gitignore  README.md  mypy.ini  pyproject.toml
visitor-backend/scripts/: format.sh  start.sh
visitor-backend/src/: api.py  settings.py
visitor-backend/src/core/: exceptions.py
visitor-backend/src/db/scripts/: seed.py
visitor-backend/src/models/: drinks.py  staff_member.py  visitor.py  visitor_details.py  visitor_drinks.py
visitor-backend/src/routers/: drinks.py  profile.py  staff_member.py  visiting_details.py  visitor.py
visitor-backend/src/schemas/: drinks.py  staff_member.py  visiting_details.py  visitior_drinks.py  visitor.py
visitor-backend/src/services/: visiting_details.py  visitor.py  visitor_drinks.py
visitor-backend/src/utils/: security.py  sms.py
visitor-frontend/: index.html  package.json  pnpm-lock.yaml
visitor-frontend/src/components/header/: header.jsx
visitor-frontend/src/lib/: utils.js
visitor-frontend/src/pages/: thanks.jsx
visitor-frontendd/: vite.config.js
visitor-frontendd/src/: App.jsx
visitor-frontendd/src/lib/: axiosInstance.js
visitor-frontendd/src/lib/hooks/: useMutation.js  useQuery.js
visitor-frontendd/src/pages/: drink-details.jsx  login.jsx  visiting-details.jsx
